# FractalExplorer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Effect.hpp  Julia.hpp  Mandlebrot.hpp  MenuItem.hpp  Shader.cpp
src/shaders/: Emulated_Julia_Mandlebrot.frag  Julia_Mandlebrot.frag
